# my-agent-rs

./: .gitignore  Makefile  README.md  build.sh  index.html  package-lock.json  package.json  pytest.ini  vite.config.ts  个人助理Agent设计文档.md
.github/workflows/: ci.yml  release.yml
agent/: agent-api.spec  main.py  pyproject.toml
agent/config/: app.yaml  cli_tools.yaml  llm_providers.yaml  rag.yaml  tools.yaml
agent/src/: __init__.py
agent/src/agent/: constants.py  graph.py  hitl_node.py  pa_middleware.py  planner.py  runner.py  slash.py  state.py
agent/src/api/: broadcast.py  chat_route.py  chat_sse.py  config_route.py  deps.py  health.py  memory_route.py  rag_ops.py  rag_route.py  scheduler_route.py  session_ops.py  sessions_route.py  tasks_route.py  tools_route.py  ws.py  ws_protocol.py
agent/src/infra/: auth.py  config.py  hitl.py  metrics.py  process_executor.py  rag_paths.py  rate_limit.py  scheduler.py  search_context.py  session_lifecycle.py  session_store.py  sqlite_store.py  time_context.py  tracing.py  user_settings.py  weather_context.py
agent/src/llm/: factory.py  fallback.py  models.py
agent/src/memory/: chat_recall.py  learner.py  rag.py  rag_vector.py  store.py
agent/src/ocr/: __init__.py  compose.py  core.py  paddle.py  rapid.py  win.py  worker.py
agent/src/tools/: mcp_loader.py  registry.py
agent/src/tools/business/: calendar.py  email.py  file.py  notes.py  outlook_adapter.py  project.py  reminders.py  todo.py
agent/src/tools/capability/: baidu_image_search.py  bash.py  cli_tools.py  code_sandbox.py  computer.py  external_cli.py  fs_cli.py  fs_tools.py  input_control.py  ocr.py  text_editor.py  tool_search.py  web_fetch.py  web_search.py  web_search_selector.py
agent/src/tools/project/: __init__.py  commands.py  migrate.py  section_commands.py  stats.py  store.py  tools.py
agent/src/tools/task/: __init__.py  api_compat.py  attachments.py  defaults.py  label_store.py  notify.py  parse.py  repeat.py  scheduler.py  store.py  tools.py
data/: .sidecar_token
observability/: README.md
observability/grafana/: personal-assistant-dashboard.json
scripts/: build.ps1  build.sh  build_sidecar.py  check_ws_types_sync.py  common.ps1  common.sh  configure_updater.ps1  configure_updater.sh  dev.ps1  ensure_sidecar_stub.py  gen_icons.py  generate-theme-index.mjs  generate-themes-from-gpui.mjs  generate_latest_json.py  generate_ws_types.py  migrate-theme-colors-2.mjs  migrate-theme-colors.mjs  run-desktop.ps1  run-desktop.sh  run-sidecar.ps1  run-sidecar.sh  run-web.ps1  run-web.sh  run.ps1  run.sh  setup.ps1  setup.sh  split-theme-meta.mjs  split-themes.mjs  stub_sidecar.rs  test.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keyring.rs  lib.rs  llm_config.rs  main.rs  native_bridge.rs  provider_models.rs  sidecar.rs  sidecar_update.rs  tray.rs
src-tauri/src/commands/: fs_open.rs  mod.rs  screen.rs
src/components/: AlertDialog.vue  AppDatePicker.vue  AppSidebar.vue  AppearanceSettings.vue  ChatInputBar.vue  ChatPanel.vue  ConfirmModal.vue  DeleteTasksConfirmDialog.vue  DialogHost.vue  InputDialog.vue  LabelEditDialog.vue  MarkdownContent.vue  MessageAttachments.vue  ProcessSteps.vue  ProjectEditDialog.vue  ProviderEditDialog.vue  ProviderSettings.vue  SectionEditDialog.vue  SessionListItem.vue  SessionNameModal.vue  SessionSidebar.vue  StartupOverlay.vue  StatusBar.vue  TaskEditDialog.vue  TaskListRow.vue  TaskListTable.vue  ToolCallCard.vue
src/composables/: useAgentWs.ts  useAppearance.ts  useChatInputModels.ts  useTauriNative.ts
src/stores/: dialog.ts  knowledge.ts  memory.ts  navigation.ts  session.ts  settings.ts  tasks.ts
src/styles/: datepicker-theme.css  main.css  themes.css
src/themes/: adventure.css  adventure.meta.ts  alduin.css  alduin.meta.ts  asciinema.css  asciinema.meta.ts  aurora.css  aurora.meta.ts  ayu.css  ayu.meta.ts  base.css  catppuccin.css  catppuccin.meta.ts  cyberpunk.css  cyberpunk.meta.ts  ember.css  ember.meta.ts  everforest.css  everforest.meta.ts  fahrenheit.css  fahrenheit.meta.ts  flexoki.css  flexoki.meta.ts  gruvbox.css  gruvbox.meta.ts  harper.css  harper.meta.ts  hybrid.css  hybrid.meta.ts  index.css  index.ts  jellybeans.css  jellybeans.meta.ts  (+27 more)
(+115 files in other folders)
