[project]
name = "personal-assistant-agent"
version = "0.1.0"
description = "Personal Assistant Agent Sidecar"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-community",
    "langchain-ollama",
    "duckduckgo-search>=6.0",
    "ddgs>=9.0",
    "trafilatura>=2.0",
    "httpx",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "websockets",
    "pyyaml",
    "loguru",
    "aiosqlite",
    "apscheduler>=3.10",
    "faiss-cpu>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "httpx",
]
build = [
    "pyinstaller>=6.0",
]
mcp = [
    "langchain-mcp-adapters>=0.1",
]
computer = [
    "mss>=9.0",
    "pillow>=10.0",
    "pyautogui>=0.9",
]
outlook = [
    "pywin32>=306; sys_platform == 'win32'",
]
rag = [
    "sentence-transformers>=3.0",
]
browser = [
    "playwright>=1.40",
]
ocr-rapid = [
    "rapidocr-onnxruntime>=1.3",
]
ocr-winrt = [
    "winrt-runtime>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Media.Ocr>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Globalization>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Foundation>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Graphics.Imaging>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Storage>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Storage.Streams>=3.2.1; sys_platform == 'win32'",
]
ocr-paddle = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
]
ocr = [
    "rapidocr-onnxruntime>=1.3",
    "winrt-runtime>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Media.Ocr>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Globalization>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Foundation>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Graphics.Imaging>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Storage>=3.2.1; sys_platform == 'win32'",
    "winrt-Windows.Storage.Streams>=3.2.1; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
